--- a/css/index.css
+++ b/css/index.css
@@ -47,5 +47,5 @@
 }
 
 #instagram{
-    background-color: #821a9f;
+    background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
 }
